--- a/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = $"購物車";
 }
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>購物車</h1>
     <div class="sexyborder">
         <table class="fancytable">
