--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewBag.Title = "商品詳情";
 }
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>商品詳情</h1>
     <partial name="~/Views/Seller/DetailsTablePartial/Swiper.cshtml" />
     <form action="~/Buyer/Details" method="post">
