--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = $"{(ViewBag.Trade == "交換" ? "交換" : "買賣")}賣場";
 }
-<div class="container-fluid">
+<div class="container">
     <h1 style="background-color: #92705A; border-radius: 15px 15px 0 0; width: 170px; margin-bottom: 0; text-align: center;">@(ViewBag.Trade == "交換" ? "交換" : "買賣")賣場</h1>
     <div class="p-2" style="background-color: #92705A; border-radius: 0 15px 15px 15px;">
         <div class="row">
