--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "搜尋商品";
 }
-<div class="container-fluid">
+<div class="container">
     <h1 class="mt-4" style="background-color: #92705A; border-radius: 15px 15px 0 0; width: 170px; margin-bottom: 0; text-align: center;">搜尋商品</h1>
     <h2 style="background-color: #92705A; margin-bottom: 0; color:white; border-radius: 0 15px 0 0;">@ViewBag.Count</h2>
     <div class="p-2" style="background-color: #92705A; border-radius: 0 0 15px 15px;">
