--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Title = "新增商品";
 }
 
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>新增商品</h1>
     <form action="~/Seller/Create" method="post" enctype="multipart/form-data">
         <partial name="~/Views/Seller/EditTablePartial/ProductInformation.cshtml" />
