--- a/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductInformation.cshtml
@@ -31,7 +31,7 @@
                     <p id="ISBN_length" class="text-right ml-4"></p>
                 </div>
                 <span asp-validation-for="ISBN" class="text-danger"></span>
-                <button class="btn btn-outline-success mt-3" onclick="searchByISBN()" type="button">api查詢書籍</button>
+                <button class="btn btn-outline-success mt-3" onclick="searchByISBN()" type="button">查詢書籍</button>
             </td>
         </tr>
         <tr>
