--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
     <main role="main">
         @RenderBody()
     </main>
-    <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px;">
+    <footer class="border-top footer text-muted" style="margin-top:3px;">
         <div class="container-footer justify-content-between">
             <div class="px-2">
                 &copy; 2023 - CoreMVC5_UsedBookProject
