--- a/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="container px-5 pt-5">
     <h1 class="text-center">登入</h1>
     <hr />
-    <div class="w-50 m-auto">
+    <div class="m-auto p-3" style="width: 300px; height: 350px; background-color: white; border: 2px solid orange; border-radius: 15px;">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <p id="ErrorMessage" class="d-none">@TempData["Error"]</p>
@@ -22,7 +22,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <button type="submit" class="btn-login-custom m-auto d-block">
                     登入
                     <span></span><span></span><span></span><span></span>
