--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewBag.Title = "交換訂單詳情";
 }
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>交換訂單詳情</h1>
     <div class="sexyborder">
         <table class="fancytable">
