--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Title = $"{(ViewBag.trade == "交換" ? "交換" : "買賣")}訂單紀錄";
 }
 
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>@(ViewBag.trade == "交換" ? "交換" : "買賣")訂單紀錄</h1>
     <div class="d-flex justify-content-between my-3">
         <a href="@Url.Action("MySales", "Buyer", new {status = "全部", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "全部" ? "border: 2px solid red;" : "")">
