--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = $"願望清單";
 }
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>願望清單</h1>
     <div class="row">
         <div class="col-6">
