--- a/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = $"願望清單";
 }
-<div class="container-fluid">
+<div class="container">
     <h1 class="mt-4" style="background-color: #92705A; border-radius: 15px 15px 0 0; width: 170px; margin-bottom: 0; text-align: center;">願望清單</h1>
     <div class="p-2" style="background-color: #92705A; border-radius: 0 15px 15px 15px;">
         <div class="row">
