--- a/CoreMVC5_UsedBookProject/Views/Messenger/enterCreate.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Messenger/enterCreate.cshtml
@@ -51,7 +51,7 @@
                 </div>
                 <div style="display:flex;">
                     <label asp-for="CreatedAt" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="CreatedAt" class="form-control" required />
+                    <p>@DateTime.Now</p>
                     <span asp-validation-for="CreatedAt" class="field-error"></span>
                 </div>
             </div>
