--- a/CoreMVC5_UsedBookProject/Views/Messenger/enterEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Messenger/enterEdit.cshtml
@@ -46,7 +46,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="enterCreate">
+        <form asp-action="enterEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="display:flex; flex-direction:column;  gap:10px;">
                 <div style="display:flex;display:none;">
@@ -61,7 +61,7 @@
                 </div>
                 <div style="display:flex;">
                     <label asp-for="CreatedAt" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="CreatedAt" class="form-control" />
+                    <p>@Model.CreatedAt</p>
                     <span asp-validation-for="CreatedAt" class="text-danger"></span>
                 </div>
                 <div class="form-group">
