--- a/CoreMVC5_UsedBookProject/Views/Seller/Edit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Edit.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Title = "編輯商品";
 }
 
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>編輯商品</h1>
     <form action="~/Seller/Edit" method="post" enctype="multipart/form-data">
         <partial name="~/Views/Seller/EditTablePartial/ProductInformation.cshtml" />
