--- a/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "賣家中心";
 }
 
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>賣家中心</h1>
     <h2><strong>買賣</strong>待處理事項</h2>
     <div class="sexyborder">
