--- a/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewBag.Title = "買賣訂單詳情";
 }
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>買賣訂單詳情</h1>
     <div class="sexyborder">
         <table class="fancytable">
