--- a/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
@@ -4,44 +4,34 @@
 @{
     ViewData["Title"] = "管理員控制中心";
 }
-<div style="padding-top: 20px;" class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators" style="margin-bottom:0;">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" style="max-height: 547px;">
-            <div class="carousel-item active" style="max-height:547px;">
-                <img src="/Images/Home/@ViewBag.Imgs[0]" asp-append-version="true" class="d-block w-100" alt="..." onerror="this.onerror='';this.src='/DeafultPictures/Carousel.jpg'">
-            </div>
-            <div class="carousel-item" style="max-height:547px;">
-                <img src="/Images/Home/@ViewBag.Imgs[1]" asp-append-version="true" class="d-block w-100" alt="..." onerror="this.onerror='';this.src='/DeafultPictures/Carousel.jpg'">
-            </div>
-            <div class="carousel-item" style="max-height:547px;">
-                <img src="/Images/Home/@ViewBag.Imgs[2]" asp-append-version="true" class="d-block w-100" alt="..." onerror="this.onerror='';this.src='/DeafultPictures/Carousel.jpg'">
-            </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="/Images/Home/@ViewBag.Imgs[0]" asp-append-version="true" class="d-block w-100" alt="..." onerror="this.onerror='';this.src='/DeafultPictures/Carousel.jpg'">
         </div>
-        <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev" style="background-color: transparent; border: 0px;">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next" style="background-color: transparent; border: 0px;">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </button>
+        <div class="carousel-item">
+            <img src="/Images/Home/@ViewBag.Imgs[1]" asp-append-version="true" class="d-block w-100" alt="..." onerror="this.onerror='';this.src='/DeafultPictures/CarouselSecond.jpg'">
+        </div>
+        <div class="carousel-item">
+            <img src="/Images/Home/@ViewBag.Imgs[2]" asp-append-version="true" class="d-block w-100" alt="..." onerror="this.onerror='';this.src='/DeafultPictures/CarouselThird.jpg'">
+        </div>
     </div>
-    <dl style="width:100%;" class="mt-5">
-        <dd class="text-center" style="margin:0 23%; background-color:#fffaf0; letter-spacing: 5px; line-height: 2; display: flex; justify-content: center; align-items: center; font-size:24px; padding:0 3%; border: 1px solid orange; border-radius: 15px;">
-            @Html.DisplayFor(t => t.TextValue)
-        </dd>
-    </dl>
+    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev" style="background-color: transparent; border: 0px;">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next" style="background-color: transparent; border: 0px;">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </button>
 </div>
-<style>
-    main {
-        background-image: url('/adminimg/wood.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-</style>
-
+<dl style="width:100%;" class="mt-5">
+    <dd class="text-center" style="margin:0 23%; background-color:#fffaf0; letter-spacing: 5px; line-height: 2; display: flex; justify-content: center; align-items: center; font-size:24px; padding:0 3%; border: 1px solid orange; border-radius: 15px;">
+        @Html.DisplayFor(t => t.TextValue)
+    </dd>
+</dl>
