--- a/CoreMVC5_UsedBookProject/wwwroot/css/Account/Login.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Account/Login.css
@@ -3,12 +3,8 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-label, h1 {
+h1 {
     color: white;
-    text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-.text-danger {
-    -webkit-text-stroke: 0.75px #dc3545;
     text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .btn-login-custom {
