--- a/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
@@ -9,10 +9,9 @@
 }
 <div class="container-fluid pb-5">
     <h1>我的資訊</h1>
-    <h3 class="text-primary">@TempData["Message"]</h3>
     <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1">
         <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black; overflow: hidden;">
-            <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="this.onerror='';this.src='/DeafultPictures/EmptyUserIcon.png'">
+            <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="userImageError(element);">
         </div>
         <div class="container-fluid">
             <h2>@Html.DisplayNameFor(model => model.Id)</h2><p>@Html.DisplayFor(model => model.Id)</p>
@@ -33,4 +32,8 @@
 @section topCSS{
     <link href="~/css/account/details.css" rel="stylesheet" />
     <link href="~/css/account/changeuserinfo.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+}
+@section endJS{
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
 }
