--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
     <link href="~/css/buttons.css" rel="stylesheet" />
+    <script src="~/js/seller/allprevious.js" asp-append-version="true"></script>
     @RenderSection("topCSS",required:false)
     @RenderSection("topJS", required: false)
 </head>
