--- a/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 }
 <div class="container-fluid pb-5">
     <h1>變更密碼</h1>
-    <h3 class="text-primary">@TempData["Message"]</h3>
+    <p class="d-none" id="showMessage">@TempData["Message"]</p>
     <div class="row">
         <div class="col-12">
             <form asp-action="ChangePassword">
@@ -47,6 +47,11 @@
         </div>
     </div>
 </div>
+@section topCSS{
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+}
 @section endJS{
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
+    <script src="~/js/account/changepassword.js" asp-append-version="true"></script>
     <partial name="_ValidationScriptsPartial" />
 }
