--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -8,6 +8,7 @@
 }
 <div class="container-fluid pb-5">
     <h1>變更我的資訊</h1>
+    <p class="d-none" id="showMessage">@TempData["Message"]</p>
     <div class="row">
         <div class="col-12">
             <form asp-action="ChangeUserInfo" method="post" enctype="multipart/form-data">
@@ -17,7 +18,7 @@
                         <label asp-for="UserIcon" class="control-label"></label>
                     </div>
                     <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black; overflow: hidden;">
-                        <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="this.onerror='';this.src='/DeafultPictures/EmptyUserIcon.png'">
+                        <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="userImageError(element);">
                     </div>
                     <div class="d-flex align-items-end mt-2">
                         <label for="file1" class="btn btn-outline-primary">
@@ -52,8 +53,11 @@
 </div>
 @section topCss{
     <link href="~/css/account/changeuserinfo.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 }
 @section endJS{
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
     <script src="~/js/account/changeuserinfo.js" asp-append-version="true"></script>
+    <script src="~/js/account/changepassword.js" asp-append-version="true"></script>
 }
