--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -21,14 +21,14 @@
                     <td>
                         @if (Model.BuyerISBN == "1234567891234")
                         {
-                            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px; background-color: white;">
-                                <img src=@($"/DeafultPictures/DeafultBookPicture.jpg") asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                            <div class="img200px">
+                                <img src=@($"/DeafultPictures/DeafultBookPicture.jpg") asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" />
                             </div>
                         }
                         else
                         {
-                            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px; background-color: white;">
-                                <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.BuyerISBN.Substring(3,3)}/{Model.BuyerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                            <div class="img200px">
+                                <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.BuyerISBN.Substring(3,3)}/{Model.BuyerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="productImageError(this, '@(Model.BuyerId)', '@(Model.BuyerProductId)', '@(Model.BuyerImage.Split(',')[0])');" />
                             </div>
                         }
                     </td>
@@ -47,8 +47,8 @@
                         <p class="text-left">對方的商品<br>@Model.SellerName</p>
                     </td>
                     <td>
-                        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                            <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        <div class="img200px">
+                            <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="productImageError(this, '@(Model.SellerId)', '@(Model.SellerProductId)', '@(Model.SellerImage.Split(',')[0])');" />
                         </div>
                     </td>
                     <td>
