--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
     <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
+    <script src="~/js/seller/allprevious.js" asp-append-version="true"></script>
     @RenderSection("topCSS",required:false)
     @RenderSection("topJS", required: false)
 </head>
