--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -42,6 +42,21 @@ img {
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+.img200px {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    max-width: 200px;
+    background-color: white;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    background-color: #A0522D50;
+}
+.img200pxEmpty {
+    background-image: url('/deafultPictures/deafultbookpicture.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #topBtn {
     display: none;
     position: fixed; 
