--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/ProductInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/ProductInformation.cshtml
@@ -15,7 +15,7 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.ContentText)</td>
             <td>
-                <textarea readonly>@Model.ContentText</textarea>
+                <p>@Model.ContentText</p>
             </td>
         </tr>
     </tbody>
