--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/Swiper.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/Swiper.cshtml
@@ -83,25 +83,25 @@
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.ISBN)</td>
                     <td>
-                        <textarea readonly>@Model.ISBN</textarea>
+                        <p>@Model.ISBN</p>
                     </td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Author)</td>
                     <td>
-                        <textarea readonly>@Model.Author</textarea>
+                        <p>@Model.Author</p>
                     </td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Publisher)</td>
                     <td>
-                        <textarea readonly>@Model.Publisher</textarea>
+                        <p>@Model.Publisher</p>
                     </td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Degree)</td>
                     <td>
-                        <textarea readonly>@Model.Degree</textarea>
+                        <p>@Model.Degree</p>
                     </td>
                 </tr>
             </tbody>
