--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -26,3 +26,21 @@
     </form>
 
 </div>
+@section topCSS{
+    <link href="~/css/Seller/DetailsTablePartial.css" asp-append-version="true" rel="stylesheet" />
+
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
+    <!-- Demo styles -->
+    <link rel="stylesheet" href="~/css/Swiper/Swiper.css" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+}
+@section endJS{
+    <!-- Swiper JS -->
+    <script src="~/lib//Swiper/swiper-bundle.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script src="~/js/Swiper/Swiper.js"></script>
+    <script src="~/js/Seller/DetailsTablePartial.js" asp-append-version="true"></script>
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
+    <script src="~/js/home/details.js" asp-append-version="true"></script>
+}
