--- a/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
@@ -21,8 +21,8 @@
             <td>
                 <input type="hidden" name="Image2" class="form-control" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image2-clear">X</button>
-                <div id="img2Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img2" id="img2" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img2Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img2" id="img2" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[0])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file2" class="btn btn-outline-primary">
@@ -38,8 +38,8 @@
             <td>
                 <input type="hidden" name="Image3" class="form-control" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image3-clear">X</button>
-                <div id="img3Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img3" id="img3" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img3Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img3" id="img3" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[1])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file3" class="btn btn-outline-primary">
@@ -55,8 +55,8 @@
             <td>
                 <input type="hidden" name="Image4" class="form-control" value="@(Model.Image4 == null ? "無圖片" : Model.Image4)" id="Image4" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image4-clear">X</button>
-                <div id="img4Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img4" id="img4" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img4Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img4" id="img4" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[2])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file4" class="btn btn-outline-primary">
@@ -72,8 +72,8 @@
             <td>
                 <input type="hidden" name="Image5" class="form-control" value="@(Model.Image5 == null ? "無圖片" : Model.Image5)" id="Image5" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image5-clear">X</button>
-                <div id="img5Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img5" id="img5" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img5Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img5" id="img5" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[3])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file5" class="btn btn-outline-primary">
@@ -89,8 +89,8 @@
             <td>
                 <input type="hidden" name="Image6" class="form-control" value="@(Model.Image6 == null ? "無圖片" : Model.Image6)" id="Image6" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image6-clear">X</button>
-                <div id="img6Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img6" id="img6" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img6Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img6" id="img6" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[4])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file6" class="btn btn-outline-primary">
@@ -106,8 +106,8 @@
             <td>
                 <input type="hidden" name="Image7" class="form-control" value="@(Model.Image7 == null ? "無圖片" : Model.Image7)" id="Image7" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image7-clear">X</button>
-                <div id="img7Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img7" id="img7" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img7Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img7" id="img7" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[5])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file7" class="btn btn-outline-primary">
@@ -123,8 +123,8 @@
             <td>
                 <input type="hidden" name="Image8" class="form-control" value="@(Model.Image8 == null ? "無圖片" : Model.Image8)" id="Image8" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image8-clear">X</button>
-                <div id="img8Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img8" id="img8" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img8Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img8" id="img8" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[6])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file8" class="btn btn-outline-primary">
@@ -140,8 +140,8 @@
             <td>
                 <input type="hidden" name="Image9" class="form-control" value="@(Model.Image9 == null ? "無圖片" : Model.Image9)" id="Image9" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image9-clear">X</button>
-                <div id="img9Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
-                    <img src="" alt="img9" id="img9" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                <div id="img9Div" class="mb-3 p-2 img200px">
+                    <img src="" alt="img9" id="img9" onerror="productImageError(this, '@(Model.CreateBy)', '@(Model.ProductId)', '@(Model.Image1.Split(',')[7])');" />
                 </div>
                 <div class="d-flex align-items-end mt-2">
                     <label for="file9" class="btn btn-outline-primary">
