--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewData["Title"] = "變更我的資訊";
 }
-<div class="container-fluid pb-5">
+<div class="container mt-2">
     <h1>變更我的資訊</h1>
     <p class="d-none" id="showMessage">@TempData["Message"]</p>
     <div class="row">
