--- a/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Forbidden";
 }
 
-<div class="container-fluid">
+<div class="container mt-2">
     <h1>拒絕存取</h1>
 
     <h2>@(User.Identity.Name)雖通過帳密驗證</h2>
