--- a/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
@@ -7,7 +7,7 @@
 @{
     ViewData["Title"] = "我的資訊";
 }
-<div class="container-fluid pb-5">
+<div class="container mt-2">
     <h1>我的資訊</h1>
     <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1">
         <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black; overflow: hidden;">
