--- a/CoreMVC5_UsedBookProject/Views/Account/ResultMessage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ResultMessage.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "ResultMessage";
 }
 
-<div class="container-fluid">
+<div class="container mt-2">
     @if (!String.IsNullOrEmpty(ViewData["Title"].ToString()))
     {
         <h1 class="text-bg-danger">@ViewData["Title"]</h1>
