--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="~/css/seller/all.css" asp-append-version="true" rel="stylesheet" />
     <script src="~/js/seller/allprevious.js" asp-append-version="true"></script>
     @RenderSection("topCSS",required:false)
@@ -22,7 +23,7 @@
     <header>
         <nav class="d-flex bg-white border-bottom box-shadow">
             <div class="container-fluid d-flex">
-                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-book"></span> <strong>二手書交換平台</strong></a>
+                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-book"></span> <strong>二手書交換平台-賣家</strong></a>
                 <div class="flex-grow-1">
                     <ul class="navbar-nav flex-grow-1 d-flex flex-row">
                         <partial name="_NavItemPartial"></partial>
