--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutDoList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutDoList.cshtml
@@ -16,7 +16,7 @@
     @RenderSection("topJS", required: false)
 </head>
 <body style="background-image:url('/adminimg/mail1.jpg');">
-    <div style="position:fixed; top:0; width:100VW;">
+    <div style="position:fixed; top:0; width:100VW; z-index:999;">
         <div style="display:flex;">
             <div style="min-width:244px; min-height:75px; width: 30%;background-color: #292929; padding: 10px; cursor:default;box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); text-align: center; font-size:26px; color:#87cefa ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="auto" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16" style="margin-right:10px;">
