--- a/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
@@ -1,10 +1,10 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model MyProductsViewModel
 @{
-    ViewBag.Title = $"購物車";
+    ViewBag.Title = $"追蹤清單";
 }
 <div class="container mt-2">
-    <h1>購物車</h1>
+    <h1>追蹤清單</h1>
     <div class="sexyborder">
         <table class="fancytable">
             <thead>
@@ -54,7 +54,7 @@
                             </div>
                         </td>
                         <td>
-                            <p title="購物車是空的" class="text-left">購物車是空的</p>
+                            <p title="追蹤清單是空的" class="text-left">追蹤清單是空的</p>
                         </td>
                         @if (ViewBag.Trade == "買賣")
                         {
