--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/SwiperButton.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/SwiperButton.cshtml
@@ -21,7 +21,7 @@
                 交換
             </button>
         }
-        <button type="button" class="btn btn-outline-success my-2 p-3" id="shoppingcart" value="@Model.ProductId"><i class="bi bi-cart4"></i> 增加至購物車</button>
+        <button type="button" class="btn btn-outline-success my-2 p-3" id="shoppingcart" value="@Model.ProductId"><i class="bi bi-bookmark-heart-fill"></i> 增加至追蹤清單</button>
     }
     else if (controller == "Seller" && action == "Details")
     {
