--- a/CoreMVC5_UsedBookProject/Views/Shared/_NavItemPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NavItemPartial.cshtml
@@ -80,7 +80,7 @@ else if (controller == "Buyer")
         <a class="nav-link text-dark h-100 btn-custom" href="@Url.Action("MySales", "Buyer", new {trade = "交換"})"><i class="bi bi-file-text-fill"></i> 交換訂單紀錄</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark h-100 btn-custom" href="@Url.Action("Shoppingcart", "Buyer", new {})"><i class="bi bi-cart4"></i> 購物車</a>
+        <a class="nav-link text-dark h-100 btn-custom" href="@Url.Action("Shoppingcart", "Buyer", new {})"><i class="bi bi-bookmark-heart-fill"></i> 追蹤清單</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark h-100 btn-custom" href="@Url.Action("Wish", "Buyer", new {})"><i class="bi bi-star-half"></i> 我的願望清單</a>
